--- a/hzs_frontend/src/header/Header.css
+++ b/hzs_frontend/src/header/Header.css
@@ -1,58 +1,67 @@
-#header{
+body{
     margin: 0;
     padding: 0;
-    background-color: rgb(179, 61, 61);
+    background: url(pizza_pozadina2.jpg);
+    background-position: center;
+    background-size: cover;
+    font-family: sans-serif;
+}
+header
+{
+    padding: 10px 100px;
+    box-sizing: border-box;
+}
+.logo{
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    position: absolute;
+    left: calc(50% + 150px);
+    animation-name: obrtanje;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+}
+@keyframes obrtanje{
+   100% {-webkit-transform: rotate(360deg);}
+}
+nav{
     width: 100%;
-    height: 100px;
-    position: relative;
+    height: 50px;
+    background: rgba(0,0,0,.8);
+    border-top: 1px solid rgba(255,255,255,.2);
+    border-bottom: 1px solid rgba(255,255,255,.2);
+    position: sticky;
+    top: 0px;
+}
+nav ul{
+    display: flex;
+    margin: 0;
+    padding: 0 430px;
+    float: center;
+}
+nav ul li{
+   list-style: none;
+}
+nav ul li a{
     display: block;
-}
-
-#container{
-    width: 80%;
-    margin-left: 10%;
-    padding: 5px;
-}
-
-#title{
-    font-size: 50px;
-    font-family: 'Times New Roman', Times, serif;
-    color: rgb(223, 208, 10);
-    text-align: center;
-}
-
-#header nav{
-    display: block;
-    position: relative;
-    width: 100%;
-    height: fit-content;
-    margin: 0 0 0 0;
-    padding: 5px;
-    background-color: rgb(110, 105, 105);
-}
-
-#header nav div{
-    position: relative;
-    display: inline-block;
-    margin: 0 2px 0 2px;
-    padding: 0;
-    width: 24%;
-    text-align: center;
-    background-color: rgb(214, 96, 96);
-}
-
-#header nav div:hover{
-    width: 26%;
-    font-weight: bold;
-    text-decoration: underline;
-    background-color: rgb(16, 188, 245);
     color: #fff;
-    transition: 0.2s;
-}
-
-#header nav a{
+    padding: 0 45px;
     text-decoration: none;
-    color: black;
-    font-size: 200%;
-    font-family: 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 50px;
+    position: relative;
+    text-align: center;
+    transition-duration: 0.5s;
+}
+nav ul li a:hover,
+nav ul li a.active
+{
+    background: #f00;
+}
+ header h1 {
+     color:#fff;
+     font-size: 40px;
+     font-weight: bold;
+     text-align:center;
 }
