--- a/hzs_frontend/src/mapping/maps.css
+++ b/hzs_frontend/src/mapping/maps.css
@@ -15,8 +15,9 @@
 }
 
 #search_wrapper{
-    margin: 0;
-    width: 90%;
+    margin: 0 150px 0 150px;
+    width: 300px;
+    height: 50px;
     display: block;
     position: absolute;
     z-index: 10;
@@ -24,8 +25,19 @@
     height: fit-content;
 }
 
+#search_wrapper input{
+    font-size: 20px;
+    width: 300px;
+    height: 25px;
+}
+
 reach-portal div{
     position: absolute;
     z-index: 10;
+}
+
+reach-portal div li{
+    font-size: 20px;
+    text-decoration: none;
 }
 
