--- a/hzs_frontend/src/mapping/maps.css
+++ b/hzs_frontend/src/mapping/maps.css
@@ -15,17 +15,17 @@
 }
 
 #search_wrapper{
-    margin: 0 150px 0 150px;
+    margin: 15px 150px 0 150px;
     width: 300px;
     height: 50px;
     display: block;
     position: absolute;
     z-index: 10;
-    margin: 1% 0 0 10%;
     height: fit-content;
 }
 
 #search_wrapper input{
+    margin-left: ;
     font-size: 20px;
     width: 300px;
     height: 25px;
