--- a/hzs_frontend/src/mapping/MapPage.css
+++ b/hzs_frontend/src/mapping/MapPage.css
@@ -1,20 +1,23 @@
 
 #flex-container{
-    position: relative;
-    margin: 15px;
     display: flex;
     flex-wrap: wrap;
     grid-template-columns: auto auto;
+    position: relative;
+    margin: 15px;
 }
 
 #map_win_container{
     margin: 0 15px 0 15px;
+    min-width: 300px;
     width: 45%;
+    z-index: 0;
 }
 
 #review_form{
     margin: 0 15px 0 15px;
     width: 45%;
+    z-index: 0;
 }
 
 #form_container{
@@ -22,10 +25,43 @@
     min-width: 300px;
     height: 500px;
     /*max-height: fit-content;*/
-    background-color: rgb(141, 97, 97);
+    background-color: rgba(187, 104, 104, 0.685);
     border: 2px double rgb(41, 7, 7);
     border-radius: 5px;
+    padding: 0;
 }
+
+#form_container h3{
+    text-align: center;
+    color: white;
+    font-size: 25px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#form_container h5{
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+
+#form_container h5{
+    text-align: center;
+    color: white;
+    font-size: 20px;
+}
+
+#form_container button{
+    text-align: center;
+    /*border: none;*/
+    background-color:rgb(173, 173, 173);
+    font-size: 20px;
+    display: inline-block;
+    position: relative;
+    width: 30%;
+    height: 50px;
+    margin: 0 10% 0 10%;
+}
+
 
 #list{
     position: relative;
