--- a/hzs_frontend/src/css/Review.css
+++ b/hzs_frontend/src/css/Review.css
@@ -1,11 +1,9 @@
 #container {
-    /*width: 500px;
-    height: 250px;*/
     width: 400px;
     height: 400px;
     border: 1px black solid;
     border-radius: 5px;
-    /*background: #1c5d7a;*/
+    background: #1c5d7a;
     display: inline-block;
     margin: 2px;
 }
@@ -29,12 +27,12 @@
     margin: auto;
 }
 
-p {
+/*p {
     margin-left: 25px;
     margin-right: 25px;
     border: 1px black solid;
     background: white;
-}
+}*/
 
 #likes-dislikes {
     margin-left: 25px;
