--- a/hzs_frontend/src/App.css
+++ b/hzs_frontend/src/App.css
@@ -13,6 +13,13 @@
   }
 }
 
+#container{
+  position: relative;
+  display: block;
+  margin: 0;
+  width: 100%;
+}
+
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
