--- a/hzs_frontend/src/header/Header.css
+++ b/hzs_frontend/src/header/Header.css
@@ -1,11 +1,3 @@
-body{
-    margin: 0;
-    padding: 0;
-    background: url(pizza_pozadina2.jpg);
-    background-position: center;
-    background-size: cover;
-    font-family: sans-serif;
-}
 header
 {
     padding: 10px 100px;
@@ -25,6 +17,26 @@ header
 @keyframes obrtanje{
    100% {-webkit-transform: rotate(360deg);}
 }
+
+#title{
+    text-align: center;
+    position: relative;
+    display: block;
+    height: fit-content;
+    width: 100%;
+    margin-bottom: 35px;
+}
+
+#title h1{
+    display: inline-block;
+    vertical-align: text-bottom;
+}
+
+#title h1{
+    display: inline-block;
+    vertical-align: top
+}
+
 nav{
     width: 100%;
     height: 50px;
